Styles/global/3_blocks/_illustration.less
@import "../../_vars";

.illustration {
    position: relative;
    padding-bottom: @spacing--large + @spacing;
    .query-min(@screen--md; {
      padding-bottom: 0;      
      margin-bottom: @spacing--large;
    });
    .only-old-ie({
      display: none; 
    });    
    &__background {
        display: none;
        .query-min(@screen--md; {
            display: block; 
        });
    }
    &__figure {
        width: auto;
        max-width: 100%;
        .transition(transform 200ms @swift-out);
        margin-bottom: @spacing;
        .query-min(@screen--md; {
          margin-bottom: 0;         
        });
    }
    &__item {
       .query-min(@screen--md; {	
        .illustration__figure {
          .animation(animations__fade-in-down 500ms @swift-out backwards);	
        }
        &:nth-child(1) {
          .illustration__figure {
    				.animation-delay(.05s);
  				}
  			}
  			&:nth-child(2) {
          .illustration__figure {
    				.animation-delay(.1s);
  				}
  			}
  			&:nth-child(3) {
          .illustration__figure {    			
  				  .animation-delay(.15s);	
  				}			
  			}
  			&:nth-child(4) {
          .illustration__figure {
  				  .animation-delay(.2s);	
  				}
  			}
  			&:nth-child(5) {
          .illustration__figure {	
  				  .animation-delay(.25s);
  				}
  			}
  			&:nth-child(6) {
          .illustration__figure {    			
  				  .animation-delay(.3s);
  				}
  			}									
  			&:nth-child(7) {
          .illustration__figure {	
  				  .animation-delay(.35s);
  				}
  			}
  			&:nth-child(8) {
          .illustration__figure {    			
  				  .animation-delay(.4s);
  				}
  			}			        
      });  
      &--mobile {
          .query-min(@screen--md; {
              display: none; 
          });
      }      
    }
    &__container {
      padding: 0 @gutter;      
      .query-max(@screen--md; {	
        width: auto !important;
      });
      .query-min(@screen--md; {	
        padding: 0;
        position: absolute;
        display: block;
      });
      .query-min(@screen--md; {	
      &--hover {
        z-index: 3;        
        .illustration__figure {
          .transform(translateY(-@spacing--medium));
        }
        .illustration__trigger-caption--contracted {
          display: none;  
        }
        .illustration__hover-box {
          display: block !important;   
        }
      }
      });
    }
    
    &__trigger {
      display: none;
      .query-min(@screen--md; {	
        display: block;
        position: absolute;
        z-index: 3;
        top: 0;
        left: 0;
        right: 0;
        bottom: 0;
        background: rgba(255,255,255,0); // Hack to get pointer events on hover on IE 10<
        margin-bottom: 0;
        &:focus {
          & + .illustration__figure {
            .transform(translateY(-@spacing--medium));
          }
          .illustration__trigger-caption {
            background-image: data-uri('/UI/gfx/square--red-dark.svg');
          }
          .illustration__trigger-caption--contracted {
            display: inline-block;  
          }
        }
        &--expanded {
          & + .illustration__figure {
            .transform(translateY(-@spacing--medium));
          }
          .illustration__trigger-caption--expanded {
            display: inline-block;  
          }        
          &:focus {
            .illustration__trigger-caption--expanded {
              display: inline-block;            
            }
            .illustration__trigger-caption--contracted {
              display: none;  
            }
          }        
        }
      });
    }
    
    &__trigger-caption {
      display: none;
  		background-image: data-uri('/UI/gfx/square--red.svg');
  		background-position: center center;
  		background-repeat: no-repeat;			
  		background-size: contain;
      width: 2.5rem;
      height: 2.5rem;
      line-height: 2.5rem;
      position: absolute;
      left: 50%;
      .transform( translateX(-50%));      
      .animation(animations__fade-in 300ms @swift-out);      
      bottom: 5px;
    }
    
    &__hover-box {
        width: 20em;
        .query-max(@screen--md; {	        
            display: block !important;
            position: static;
            left: auto !important;
            bottom: auto !important;
            .transform(none);
            width: 100%;
            padding: 0;
            border: none;
            max-width: none;
            margin-bottom: @spacing;
            .hover-box__point {
                display: none;
            }
        });
    }
    &__carousel-button {
      position: absolute;
      width: auto;
      z-index: 2;
      .query-min(@screen--md; {	
        display: none !important;
      }); 
      &--previous {
        left: 0;
        bottom: 0;
      } 
      &--next {
        right: 0;
        bottom: 0;
      }  
    }
}

